--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ hr {
     text-align: center;
     border-top-left-radius: 11px ;
     border-top-right-radius: 11px ;
+    margin:4rem 0rem 0rem 0rem
 }
 .footer .link{
     color:white;
@@ -163,44 +164,17 @@ hr {
 .footer .footer-header{
     font-weight: bold;
     font-size:large;
+    color:white;
+    
+    
 }
 
 
 
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-  }
-  
-  .fa:hover {
-      opacity: 0.7;
-  }
+
   
   
-  
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  }
-  
-  
-  
-  .fa-linkedin {
-    background: #007bb5;
-    color: white;
-  }
-  
-  
-  
-  .fa-instagram {
-    background: #125688;
-    color: white;
-  }
   
 
   /* a1:hover {
@@ -213,3 +187,10 @@ hr {
       font-size: 99%;
       opacity: 0.8; 
      }
+
+::marker {
+        unicode-bidi:none;
+        font-variant-numeric: none;
+        text-transform: none;
+        color: var(--primary-color);
+    }
